force-app/main/default/objects/Guide__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this page should be available to the guide.</description>
    <inlineHelpText>Check to enable this page for the guide.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>