force-app/main/default/objects/Guide__c/fields/For_Guides__c.field-meta.xml
<CustomField>
    <fullName>For_Guides__c</fullName>
    <description>The guides this page is for.</description>
    <inlineHelpText>The guides this page is intended for.</inlineHelpText>
    <label>For Guides</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Guides</valueSetName>
    </valueSet>
</CustomField>