force-app/main/default/objects/Guide__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>Set of instructions for a page in the grooming guide.</description>
    <inlineHelpText>Instructions for this step.</inlineHelpText>
    <label>Instructions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>