force-app/main/default/objects/Guide__c/fields/Instructions_HTML__c.field-meta.xml
<CustomField>
    <fullName>Instructions_HTML__c</fullName>
    <description>HTML-formatted instructions for this page - for display in grooming guide aura page.</description>
    <inlineHelpText>HTML-formatted instructions for this page - for display in the grooming guide aura app.</inlineHelpText>
    <label>Instructions (HTML)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>