force-app/main/default/objects/Guide__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>This article&apos;s intended place in the guide it is a part of.</description>
    <inlineHelpText>The article&apos;s intended place in its guide; affects the order pages are displayed in on the web component.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>