force-app/main/default/objects/Guide__c/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <description>Title for this page.</description>
    <inlineHelpText>Guide page title</inlineHelpText>
    <label>Page Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>